--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.2.2"
+    id "edu.wpi.first.GradleRIO" version "2020.3.2"
     id 'org.hidetake.ssh' version "2.9.0"
     id 'checkstyle'
     id 'jacoco'
@@ -88,10 +88,12 @@ dependencies {
     compile group: 'com.google.inject', name: 'guice', version: '4.2.2'
     compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '4.2.2'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'org.json', name:'json', version: '20201115'
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    simulation "edu.wpi.first.halsim:halsim_lowfi:${wpi.wpilibVersion}:${wpi.platforms.desktop}@zip"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
