--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ resources:
 jobs:
  - job: Windows_64_Bit
    pool:
-     vmImage: 'vs2017-win2016'
+     vmImage: 'windows-2019'
    steps:
     - powershell: |
         mkdir build
